--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,10 +3,48 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
+    android:padding="10dp">
+    
+    <LinearLayout android:orientation="horizontal"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content">
+        <TextView android:text="GPS fix period"
+        		  android:layout_width="wrap_content"
+        		  android:layout_height="wrap_content"
+        		  android:layout_weight="1" /> 
+    	<EditText android:id="@+id/request_delay"
+    	          android:text="1"
+    	          android:inputType="number"
+        		  android:layout_width="wrap_content"
+        		  android:layout_height="wrap_content"
+        		  android:layout_weight="10"
+        		  android:layout_margin="5dp"/>
+    	<TextView android:text="seconds"
+        		  android:layout_width="wrap_content"
+        		  android:layout_height="wrap_content"
+        		  android:layout_weight="1"/> 
+    </LinearLayout>
+    
+    <Button android:id="@+id/startstop"
+            android:text="Start"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"/>
+    
+    <TextView android:text="Time since stop: -"
+     		  android:layout_width="fill_parent"
+       		  android:layout_height="wrap_content"
+       		  android:layout_margin="10dp" />
+       		   
+    <TextView android:text="Time since start: -"
+     		  android:layout_width="fill_parent"
+       		  android:layout_height="wrap_content"
+       		  android:layout_margin="10dp"/>
+       		  
+    <TextView android:text="Time to first fix: -"
+     		  android:layout_width="fill_parent"
+       		  android:layout_height="wrap_content"
+       		  android:layout_margin="10dp"/>
+    
+
 </LinearLayout>
