--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -12,7 +12,7 @@
         		  android:layout_width="wrap_content"
         		  android:layout_height="wrap_content"
         		  android:layout_weight="1" /> 
-    	<EditText android:id="@+id/request_delay"
+    	<EditText android:id="@+id/fix_period"
     	          android:text="1"
     	          android:inputType="number"
         		  android:layout_width="wrap_content"
